--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,7 +1,133 @@
 <%- include('includes/header') %>
 
+<link rel="stylesheet" type="text/css" href="/css/login.css" />
+
 <body>
-    <h1>Signup page</h1>
+  <form
+    onsubmit="return validateSignUpForm()"
+    class="login_container"
+    action="/resto/sign-up"
+    method="POST"
+    enctype="multipart/form-data"
+  >
+    <div class="login_frame" style="width: 650px; height: 730px">
+      <div class="login_top">
+            <span>Ro'yxatdan o'tish</span>
+            <div>
+              Bosh sahifaga qaytish <a href="/resto" style="color: #6440fb">Home</a>
+            </div>
+            <p>
+              Ro'yxatdan allaqachon o'tganmisiz?
+              <a href="/resto/login" style="color: #6440fb">Login</a>
+            </p>
+      </div>
+
+      <div class="sign_input_frame">
+            <div class="sign_up_frame">
+                <label>Foydalanuvchining ismi</label>
+                <input
+                    type="text"
+                    name="mb_nick"
+                    class="mb_nick"
+                    placeholder="Foydalanuvchining ismi"
+                    value=""
+                    required
+                />
+            </div>
+            <div class="sign_up_frame">
+                <label>Telefon raqam</label>
+                <input
+                    type="text"
+                    name="mb_phone"
+                    class="mb_phone"
+                    placeholder="Telefon raqam"
+                    value=""
+                    required
+                />
+            </div>
+      </div>
+
+      <div class="sign_input_frame">
+            <div class="sign_up_frame">
+                <label>Password</label>
+                <input
+                    type="password"
+                    name="mb_password"
+                    class="mb_password"
+                    placeholder="passwordni kiriting"
+                    value=""
+                    required
+                />
+            </div>
+            <div class="sign_up_frame">
+                <label>Passwordni qayta kiriting</label>
+                <input
+                    type="password"
+                    name="mb_confirm_password"
+                    class="mb_confirm_password"
+                    placeholder="passwordni tasdiqlash"
+                    value=""
+                    required
+                />
+            </div>
+      </div>
+
+      <div class="login_input_frame">
+            <div class="media_frame">
+                <img class="upload_img_frame" src="/images/default_resto.jpeg">
+                <div class="upload_container">
+                    <span class="media_text">Taom Rasmi</span>
+                    <div class="filebox bs3-primary preview-image">
+                        <input
+                        class="upload-name"
+                        value="Rasmni tanlang"
+                        disabled="disabled"
+                        >
+                        <label>Rasm Yuklash</label>
+                        <input
+                            type="file"
+                            id="input_file"
+                            name="restaurant_img"
+                            placeholder="passwordni tasdiqlash"
+                            class="upload-hidden form-control-file restaurant_img"
+                        />
+                    </div>
+                    <p class="thumbnail_desc">
+                    Oshxona rasmingizni shu yerga yuklang.<br>Muhim ko'rsatmalar: .jpg, .jpeg,
+                     yoki .png. <br>Rasmda matn yo'q bo'lishi kerak
+                    </p>
+                </div>
+            </div>
+      </div>
+
+      <button class="login_btn btn" name="signup" type="submit">
+        Ro'yxatdan o'tish
+      </button>
+    </div>
+  </form>
 </body>
+
+<script>
+    function validateSignUpForm() {
+        const mb_nick = $(".mb_nick").val();
+        const mb_phone = $(".mb_phone").val();
+        const mb_password = $(".mb_password").val();
+        const mb_confirm_password = $(".mb_confirm_password").val();
+
+        if (
+            mb_nick == "" ||
+            mb_phone == "" ||
+            mb_password == "" ||
+            mb_confirm_password == ""
+        ) {
+            alert("Iltimos barcha ma'lumotlarni kiriting!");
+        } else if (mb_password !== mb_confirm_password) {
+            alert(`Iltimos passwordni to'g'ri kiriting`);
+        }
+        
+
+        return false;
+    }
+</script>
 
 <%- include('includes/footer') %>
