--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -157,6 +157,7 @@
 
         if (!restaurant_img) {
             alert("Iltimos rasmni yuklang!");
+            return false;
         }
         
 
