--- a/views/login-page.ejs
+++ b/views/login-page.ejs
@@ -4,7 +4,7 @@
 
 <body>
     <form class="login_container" action="/resto/login" method="POST">
-        <div class="login_frame" style="height: 460">
+        <div class="login_frame" style="height: 460px">
 
             <div class="login_top">
                 <span>Saytga kirish</span>
@@ -13,7 +13,7 @@
                 </div>
                 <p>
                     Ro'yxatdan o'tganmisiz?
-                    <a href="/resto/signup" style="color: #6440fb">Ro'yxatdan o'tish</a>
+                    <a href="/resto/sign-up" style="color: #6440fb">Ro'yxatdan o'tish</a>
                 </p>
             </div>
 
