--- a/public/css/login.css
+++ b/public/css/login.css
@@ -127,7 +127,7 @@ body {
     margin-top: 25px;
     width: 100%;
     height: 70px;
-    background: #33a0ff;
+    background: #2a52a2;
     border-radius: 10px;
 
     font-family: "Poppins";
